--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 out
 *.iml
 log
-My*
-my*
-My*.*
-my*.*
+/src/storage/MyListStorage.java
+/src/storage/MyMapStorage.java
+/test/storage/MyListStorageTest.java
