--- a/.gitignore
+++ b/.gitignore
@@ -2,30 +2,6 @@
 out
 *.iml
 log
-/storage/uuid1
-/storage/uuid2
-/storage/uuid3
-/lib/gson-2.10.1.jar
-/lib/hamcrest-core-1.3.jar
-/lib/hamcrest-core-1.3-javadoc.jar
-/lib/istack-commons-runtime-2.24.jar
-/lib/istack-commons-runtime-2.24-javadoc.jar
-/lib/jakarta.servlet-api-5.0.0.jar
-/lib/jakarta.xml.bind-api-2.3.2.jar
-/lib/javax.activation-api-1.2.0.jar
-/lib/javax.activation-api-1.2.0-javadoc.jar
-/lib/javax.servlet.jar
-/lib/javax.servlet.jsp.jar
-/lib/javax.servlet.jsp.jstl.jar
-/lib/jaxb-api-2.3.1.jar
-/lib/jaxb-api-2.3.1-javadoc.jar
-/lib/jaxb-impl-2.3.2.jar
-/lib/jaxb-impl-2.3.2-javadoc.jar
-/lib/jstl-1.2.jar
-/lib/junit-4.13.1.jar
-/lib/junit-4.13.1-javadoc.jar
-/lib/postgresql-42.2.1.jar
-/diagrams/L09 Strategy Pattern/Strategy.drawio
-/diagrams/L09 Strategy Pattern/Strategy 00-00.jpg
-/diagrams/L09 Strategy Pattern/Strategy 01-00.jpg
-/diagrams/L09 Strategy Pattern/Strategy 01-01.jpg
+lib
+diagrams
+storage
